tests/ui/macros/macro-pat2021-pattern-followed-by-or.stderr
error: `$x:pat` is followed by `|`, which is not allowed for `pat` fragments
  --> $DIR/macro-pat2021-pattern-followed-by-or.rs:4:28
   |
LL | macro_rules! foo { ($x:pat | $y:pat) => {} }
   |                            ^ not allowed after `pat` fragments
   |
   = note: allowed there are: `=>`, `,`, `=`, `if` or `in`
help: try a `pat_param` fragment specifier instead
   |
LL | macro_rules! foo { ($x:pat_param | $y:pat) => {} }
   |                     ~~~~~~~~~~~~

error: `$x:pat` is followed by `|`, which is not allowed for `pat` fragments
  --> $DIR/macro-pat2021-pattern-followed-by-or.rs:7:28
   |
LL | macro_rules! ogg { ($x:pat | $y:pat_param) => {} }
   |                            ^ not allowed after `pat` fragments
   |
   = note: allowed there are: `=>`, `,`, `=`, `if` or `in`
help: try a `pat_param` fragment specifier instead
   |
LL | macro_rules! ogg { ($x:pat_param | $y:pat_param) => {} }
   |                     ~~~~~~~~~~~~

error: `$pat:pat` may be followed by `|`, which is not allowed for `pat` fragments
  --> $DIR/macro-pat2021-pattern-followed-by-or.rs:9:35
   |
LL |     ( $expr:expr , $( $( $pat:pat)|+ => $expr_arm:pat),+ ) => {
   |                                   ^ not allowed after `pat` fragments
   |
   = note: allowed there are: `=>`, `,`, `=`, `if` or `in`
help: try a `pat_param` fragment specifier instead
   |
LL |     ( $expr:expr , $( $( $pat:pat_param)|+ => $expr_arm:pat),+ ) => {
   |                          ~~~~~~~~~~~~~~

error: aborting due to 3 previous errors

